# music-tracker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  env.sh  pyproject.toml
music_tracker/: .env.sample  manage.py  music_tracker_nginx.conf
music_tracker/music_tracker/: asgi.py  settings.py  urls.py  wsgi.py
music_tracker/music_tracker/tracker/: admin.py  apps.py  models.py  urls.py  views.py
music_tracker/music_tracker/tracker/migrations/: 0001_initial.py  0002_alter_album_id_alter_artist_id_alter_list_id_song.py  0003_obsessionlist_obsessionsongs.py  0004_alter_song_album_alter_song_artists_alter_song_year.py  0005_alter_album_unique_together_album_artists_and_more.py  0006_spotifytop100list_spotifytop100songs.py  0007_artistalbumranking_artistalbumrankingentry.py
music_tracker/music_tracker/tracker/static/tracker/: styles.css
music_tracker/music_tracker/tracker/templates/tracker/: artist-stats.html  index.html  obsessions-stats.html  obsessions.html  spotify-top-100-stats.html  top-100.html  top-ten-albums.html
