[tool.poetry]
name = "music-tracker"
version = "0.1.0"
description = ""
authors = ["Andrew Whipple"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
poetry-dotenv-plugin = "^0.2.0"
pre-commit = "^3.5.0"
uwsgi = "^2.0.23"
python-environ = "^0.4.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = [
    "/music_tracker/tracker/migrations/",
]
