[project]
name = "music-tracker"
version = "0.1.0"
description = ""
authors = [{name = "Andrew Whipple"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0",
    "pre-commit>=3.5.0",
    "uwsgi>=2.0.23",
    "python-environ>=0.4.54",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
exclude = [
    "/music_tracker/tracker/migrations/",
]
